FIXED: alignment of article title and content. page numbers inline with the logo (both browser and mobile view)

--- a/wp-content/themes/siso/css/news.css
+++ b/wp-content/themes/siso/css/news.css
@@ -17,13 +17,13 @@ Theme Name: Siso
 #news_holder {
 	width:85%;
 	padding-right:10px;
-	margin:auto;
+	margin:0 auto;
 }
 
 #article {
 	width:100%;
 	margin:auto;
-	padding-top:15px;
+	padding-top:12px;
 }
 
 #post_title {
@@ -39,7 +39,7 @@ Theme Name: Siso
 }
 
 #post_details {
-	margin-left:-15px;
+	/*margin-left:-15px;*/
 	display: inline-block;
 	margin: auto;
 }
@@ -157,7 +157,12 @@ hr {
 	float: left;
 }
 #post_details {
-	padding-left: 30px;
+	padding-left: 15px;
+	padding-right: 20px;
+}
+
+p.navrechts {
+    margin-bottom: 6px;
 }
 
 @media (min-width: 768px) and (max-width: 972px) and (max-height: 594px) {
@@ -199,11 +204,11 @@ hr {
 @media (max-width: 767px) {
 
 #post_details {
-	padding-left:30px;
+	padding-left:17px;
 }
 
 #post_details {
-	padding-right:40px;
+	padding-right:35px;
 }
 
 .title_link > a{
